plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'minecraft.morningmc'
version = '0.5.3.1'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    implementation 'dev.dewy:nbt:1.5.1'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'com.moandjiezana.toml:toml4j:0.7.2'
    implementation 'org.openjfx:javafx-web:21'
    implementation 'net.sf.jopt-simple:jopt-simple:6.0-alpha-3'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    compileOnly 'org.jetbrains:annotations:24.1.0'
}
kotlin {
    jvmToolchain(21)
}